--- a/src/main/resources/templates/loginView.html
+++ b/src/main/resources/templates/loginView.html
@@ -3,22 +3,22 @@
 
 <head>
     <title>Login Page</title>
-    <!-- css -->
+    <!-- 로그인 화면만 적용 css -->
     <th:block layout:fragment="css">
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/login.css" />
     </th:block>
-    <!-- js -->
-    <script src="/js/login.js"></script>
 </head>
 <div layout:fragment="content">
-    <div class="login-container">
-        <h2>로그인</h2>
-        <form action="/loginProc" method="post" name="loginForm">
-            <input id="loginId" type="text" name="loginId" placeholder="사용자명" required/>
-            <input id="password" type="password" name="password" placeholder="비밀번호" required/>
-            <input type="submit" value="로그인"/>
-        </form>
-        <button type="button" onclick="location.href='/join'">회원가입</button>
+    <div class="login-body">
+        <div class="login-container">
+            <h2>로그인</h2>
+            <form action="/loginProc" method="post" name="loginForm">
+                <input id="loginId" type="text" name="loginId" placeholder="사용자명" required/>
+                <input id="password" type="password" name="password" placeholder="비밀번호" required/>
+                <input type="submit" value="로그인"/>
+            </form>
+            <button type="button" onclick="location.href='/join'">회원가입</button>
+        </div>
     </div>
 </div>
 </html>
