--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,14 +1,14 @@
 /* 헤더 숨기기 */
-header {
+.header {
     display: none;
 }
 
 /* 푸터 숨기기 */
-footer {
+.footer {
     display: none;
 }
 
-body {
+.login-body {
     font-family: Arial, sans-serif;
     background-image: url("/img/login.jpg");
     background-repeat: no-repeat;
