--- a/src/main/resources/templates/joinView.html
+++ b/src/main/resources/templates/joinView.html
@@ -2,20 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
 <head>
     <title>Join Page</title>
-    <!-- css -->
+    <!-- 로그인 화면만 적용 css -->
     <th:block layout:fragment="css">
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/login.css" />
     </th:block>
 </head>
 <div layout:fragment="content">
-    <div class="login-container">
-        <h2>회원가입</h2>
-        <form action="/joinProc" method="post" name="joinForm">
-            <input id="loginId" type="text" name="loginId" placeholder="사용자명"/>
-            <input id="password" type="password" name="password" placeholder="비밀번호"/>
-            <input type="submit" value="회원가입"/>
-        </form>
-        <button type="button" onclick="location.href='/login'">로그인 페이지로 돌아가기</button>
+    <div class="login-body">
+        <div class="login-container">
+            <h2>회원가입</h2>
+            <form action="/joinProc" method="post" name="joinForm">
+                <input id="loginId" type="text" name="loginId" placeholder="사용자명"/>
+                <input id="password" type="password" name="password" placeholder="비밀번호"/>
+                <input type="submit" value="회원가입"/>
+            </form>
+            <button type="button" onclick="location.href='/login'">로그인 페이지로 돌아가기</button>
+        </div>
     </div>
 </div>
 </html>
