프론트 메뉴 사이드바 추가
구글 폰트 추가, 경로 접근허가 추가
베너 수정

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -15,8 +15,8 @@
     background-attachment: scroll;
     background-position: center center;
     background-size: cover;
-    margin: 0;
-    padding: 0;
+    margin: -10px;
+    padding: -10px;
     display: flex;
     justify-content: center;
     align-items: center;
