--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -231,6 +231,54 @@
 .p-90 { padding: 90px; }
 .p-100 { padding: 100px; }
 
+.p-t-0 { padding-top: 0; }
+.p-t-5 { padding-top: 5px; }
+.p-t-10 { padding-top: 10px; }
+.p-t-15 { padding-top: 15px; }
+.p-t-20 { padding-top: 20px; }
+.p-t-25 { padding-top: 25px; }
+.p-t-30 { padding-top: 30px; }
+.p-t-35 { padding-top: 35px; }
+.p-t-40 { padding-top: 40px; }
+.p-t-45 { padding-top: 45px; }
+.p-t-50 { padding-top: 50px; }
+
+.p-b-0 { padding-bottom: 0; }
+.p-b-5 { padding-bottom: 5px; }
+.p-b-10 { padding-bottom: 10px; }
+.p-b-15 { padding-bottom: 15px; }
+.p-b-20 { padding-bottom: 20px; }
+.p-b-25 { padding-bottom: 25px; }
+.p-b-30 { padding-bottom: 30px; }
+.p-b-35 { padding-bottom: 35px; }
+.p-b-40 { padding-bottom: 40px; }
+.p-b-45 { padding-bottom: 45px; }
+.p-b-50 { padding-bottom: 50px; }
+
+.p-l-0 { padding-left: 0; }
+.p-l-5 { padding-left: 5px; }
+.p-l-10 { padding-left: 10px; }
+.p-l-15 { padding-left: 15px; }
+.p-l-20 { padding-left: 20px; }
+.p-l-25 { padding-left: 25px; }
+.p-l-30 { padding-left: 30px; }
+.p-l-35 { padding-left: 35px; }
+.p-l-40 { padding-left: 40px; }
+.p-l-45 { padding-left: 45px; }
+.p-l-50 { padding-left: 50px; }
+
+.p-r-0 { padding-right: 0; }
+.p-r-5 { padding-right: 5px; }
+.p-r-10 { padding-right: 10px; }
+.p-r-15 { padding-right: 15px; }
+.p-r-20 { padding-right: 20px; }
+.p-r-25 { padding-right: 25px; }
+.p-r-30 { padding-right: 30px; }
+.p-r-35 { padding-right: 35px; }
+.p-r-40 { padding-right: 40px; }
+.p-r-45 { padding-right: 45px; }
+.p-r-50 { padding-right: 50px; }
+
 /* Margin */
 .m-0 { margin: 0; }
 .m-10 { margin: 10px; }
@@ -244,6 +292,7 @@
 .m-90 { margin: 90px; }
 .m-100 { margin: 100px; }
 
+.m-t-0 { margin-top: 0; }
 .m-t-5 { margin-top: 5px; }
 .m-t-10 { margin-top: 10px; }
 .m-t-15 { margin-top: 15px; }
@@ -255,6 +304,7 @@
 .m-t-45 { margin-top: 45px; }
 .m-t-50 { margin-top: 50px; }
 
+.m-b-0 { margin-bottom: 0; }
 .m-b-5 { margin-bottom: 5px; }
 .m-b-10 { margin-bottom: 10px; }
 .m-b-15 { margin-bottom: 15px; }
@@ -266,6 +316,7 @@
 .m-b-45 { margin-bottom: 45px; }
 .m-b-50 { margin-bottom: 50px; }
 
+.m-l-0 { margin-left: 0; }
 .m-l-5 { margin-left: 5px; }
 .m-l-10 { margin-left: 10px; }
 .m-l-15 { margin-left: 15px; }
@@ -277,6 +328,7 @@
 .m-l-45 { margin-left: 45px; }
 .m-l-50 { margin-left: 50px; }
 
+.m-r-0 { margin-right: 0; }
 .m-r-5 { margin-right: 5px; }
 .m-r-10 { margin-right: 10px; }
 .m-r-15 { margin-right: 15px; }
