--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footerFragment">
-  <div class="footer" style="width: 100%; height:100px; background: #f8f895;">this area is footer</div>
+  <div class="footer">
+  </div>
 </footer>
 </html>
