--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -13,10 +13,12 @@
         <link rel="stylesheet" href="css/components.css" />
         <link rel="stylesheet" href="css/base.css" />
         <link rel="stylesheet" href="css/custom.css" />
+        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     </th:block>
     <!-- jQuery 추가 -->
     <th:block layout:fragment="js">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="/js/header.js"></script>
     </th:block>
 </head>
 <!-- [head] 영역 끝 -->
@@ -27,7 +29,11 @@
 <header th:replace="~{fragments/header :: headerFragment}"></header>
 <!-- [header] 영역 끝 -->
 <!-- [content] 영역 시작 -->
-<div layout:fragment="content"></div>
+<section class="home-section">
+    <div class="home-content">
+        <div layout:fragment="content"></div>
+    </div>
+</section>
 <!-- [content] 영역 끝 -->
 <!-- [footer] 영역 시작 -->
 <footer th:replace="~{fragments/footer :: footerFragment}"></footer>
