--- a/src/main/resources/templates/loginView.html
+++ b/src/main/resources/templates/loginView.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
-
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns="http://www.w3.org/1999/html">
 <head>
+    <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/img/logo.png" type="image/x-icon">
     <title>Login Page</title>
-    <!-- 로그인 화면만 적용 css -->
     <th:block layout:fragment="css">
         <link rel="stylesheet" href="css/login.css" />
     </th:block>
 </head>
-<div layout:fragment="content">
+<body>
     <div class="login-body">
         <div class="login-container">
             <h2>로그인</h2>
@@ -20,5 +21,5 @@
             <button type="button" onclick="location.href='/join'">회원가입</button>
         </div>
     </div>
-</div>
+</body>
 </html>
