사이드바 메뉴 조정
로그인 배경화면 변경

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -148,9 +148,11 @@
     font-weight: 400;
     color: #fff;
     transition: all 0.4s ease;
+    white-space: nowrap;
+    overflow: hidden;
 }
 .sidebar.close .nav-links li a .link_name{
-    opacity: 0;
+    display: none;
     pointer-events: none;
 }
 .sidebar .nav-links li .sub-menu{
@@ -202,7 +204,7 @@
 .sidebar .nav-links li .sub-menu.blank{
     opacity: 1;
     pointer-events: auto;
-    padding: 3px 20px 6px 16px;
+    padding: 0 20px 0 16px;
     opacity: 0;
     pointer-events: none;
 }
@@ -275,13 +277,7 @@
     display: flex;
     align-items: center;
 }
-.home-section .home-content .bx-menu,
-.home-section .home-content .text{
-    color: #11101d;
-    font-size: 35px;
-}
-.home-section .home-content .bx-menu{
-    margin: 0 15px;
+.bx-menu{
     cursor: pointer;
 }
 .home-section .home-content .text{
