--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <header th:fragment="headerFragment">
     <div class="sidebar close">
         <div class="logo-details">
@@ -10,67 +10,52 @@
             <li>
                 <a href="#">
                     <i class='bx bx-grid-alt' ></i>
-                    <span class="link_name">Dashboard</span>
+                    <span class="link_name">대시보드</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">Category</a></li>
+                    <li><a class="link_name" href="#">대시보드</a></li>
                 </ul>
             </li>
             <li>
                 <div class="iocn-link">
                     <a href="#">
                         <i class='bx bx-collection' ></i>
-                        <span class="link_name">Category</span>
+                        <span class="link_name">근태관리</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow' ></i>
                 </div>
                 <ul class="sub-menu">
-                    <li><a class="link_name" href="#">Category</a></li>
-                    <li><a href="#">HTML & CSS</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                    <li><a href="#">PHP & MySQL</a></li>
-                </ul>
-            </li>
-            <li>
-                <div class="iocn-link">
-                    <a href="#">
-                        <i class='bx bx-book-alt' ></i>
-                        <span class="link_name">Posts</span>
-                    </a>
-                    <i class='bx bxs-chevron-down arrow' ></i>
-                </div>
-                <ul class="sub-menu">
-                    <li><a class="link_name" href="#">Posts</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Login Form</a></li>
-                    <li><a href="#">Card Design</a></li>
+                    <li><a class="link_name" href="#">근태관리</a></li>
+                    <li><a href="#">출/퇴근 신청</a></li>
+                    <li><a href="#">연차 신청</a></li>
+                    <li><a href="#">외근 신청</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">
                     <i class='bx bx-line-chart' ></i>
-                    <span class="link_name">Chart</span>
+                    <span class="link_name">차트</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">Chart</a></li>
+                    <li><a class="link_name" href="#">차트</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">
                     <i class='bx bx-history'></i>
-                    <span class="link_name">History</span>
+                    <span class="link_name">이력</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">History</a></li>
+                    <li><a class="link_name" href="#">이력</a></li>
                 </ul>
             </li>
             <li>
                 <a href="#">
                     <i class='bx bx-cog' ></i>
-                    <span class="link_name">Setting</span>
+                    <span class="link_name">세팅</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">Setting</a></li>
+                    <li><a class="link_name" href="#">세팅</a></li>
                 </ul>
             </li>
             <li>
