--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -19,6 +19,7 @@
     <th:block layout:fragment="js">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="/js/header.js"></script>
+        <script src="/js/app.js"></script>
     </th:block>
 </head>
 <!-- [head] 영역 끝 -->
