회원가입 기능 구현
alert 창 sweetalert2 사용
로데쉬 js 추가
회원 정보 엔티티 변경, baseEntity 추가
응답값을 정의하는 ApiResponse 추가

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -304,3 +304,26 @@
         left: 0;
     }
 }
+
+.alert-btn {
+    width: 200px;
+    height: 40px;
+    background-color: #007bff;
+}
+
+.alert-btn:hover {
+    background-color: #0056b3;
+}
+
+.custom-icon {
+    font-size: 10px !important;
+}
+
+.custom-title {
+    font-size: 20px !important;
+    font-weight: bold !important;
+}
+
+.custom-content {
+    font-size: 10px !important;
+}
