--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,5 +12,6 @@
         <li>에러 코드: <span th:text="${status}"></span></li>
         <li>에러 메시지: <span th:text="${message}"></span></li>
     </ul>
+    <p><a href="/">홈페이지로 돌아가기</a></p>
 </div>
 </html>
