--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -15,9 +15,11 @@
         <link rel="stylesheet" href="css/custom.css" />
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     </th:block>
-    <!-- jQuery 추가 -->
+    <!-- js -->
     <th:block layout:fragment="js">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="/js/jquery-3.6.0.min.js"></script>
+        <script src="/js/sweetalert2.all.min.js"></script>
+        <script src="/js/lodash.js"></script>
         <script src="/js/header.js"></script>
         <script src="/js/app.js"></script>
     </th:block>
