--- a/src/main/resources/templates/loginView.html
+++ b/src/main/resources/templates/loginView.html
@@ -8,13 +8,17 @@
     <th:block layout:fragment="css">
         <link rel="stylesheet" href="css/login.css" />
     </th:block>
+    <th:block layout:fragment="js">
+        <script src="/js/lodash.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    </th:block>
 </head>
 <body>
     <div class="login-body">
         <div class="login-container">
             <h2>로그인</h2>
             <form action="/loginProc" method="post" name="loginForm">
-                <input id="loginId" type="text" name="loginId" placeholder="사용자명" required/>
+                <input id="loginId" type="text" name="loginId" placeholder="로그인 아이디" required/>
                 <input id="password" type="password" name="password" placeholder="비밀번호" required/>
                 <input type="submit" value="로그인"/>
             </form>
