로그인 사용자 표시
메뉴 선택, 이동 시 선택 된 메뉴 active 효과

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -327,3 +327,9 @@
 .custom-content {
     font-size: 10px !important;
 }
+
+.nav-links li a.active {
+    background-color: #1d1b31;
+    color: white;
+    font-weight: bold;
+}
