--- a/src/main/resources/templates/attendance/attendance.html
+++ b/src/main/resources/templates/attendance/attendance.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
 <head>
-    <title>MAIN_PAGE</title>
+    <title>ATTENDANCE_PAGE</title>
 </head>
 <div layout:fragment="content">
-    <div>메인페이지</div>
+    <div>근태관리 페이지</div>
 </div>
 </html>
