--- a/src/main/resources/templates/loginView.html
+++ b/src/main/resources/templates/loginView.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/img/logo.png" type="image/x-icon">
     <title>Login Page</title>
     <th:block layout:fragment="css">
-        <link rel="stylesheet" href="css/login.css" />
+        <link rel="stylesheet" href="/css/login.css" />
     </th:block>
     <th:block layout:fragment="js">
         <script src="/js/lodash.js"></script>
