--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
         </div>
         <ul class="nav-links">
             <li>
-                <a href="#">
+                <a href="/main">
                     <i class='bx bx-grid-alt' ></i>
                     <span class="link_name">대시보드</span>
                 </a>
@@ -18,7 +18,7 @@
             </li>
             <li>
                 <div class="iocn-link">
-                    <a href="#">
+                    <a href="/api/v1/attendance">
                         <i class='bx bx-collection' ></i>
                         <span class="link_name">근태관리</span>
                     </a>
@@ -64,8 +64,8 @@
                         <img src="/img/profile_woman.jpg" alt="profileImg">
                     </div>
                     <div class="name-job">
-                        <div class="profile_name">Login User</div>
-                        <div class="job">Manager</div>
+                        <div id="profileName" class="profile_name"></div>
+                        <div id="rank" class="job"></div>
                     </div>
                     <a href="/logout">
                         <i class='bx bx-log-out'></i>
