로그인 로그아웃 시 성공, 실패 alert 창 추가
페이지 이동 시 화면 전체의 새로고침이 아니라 일부 영역만 동적으로 바뀌도록 변경

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,37 +25,37 @@
                     <i class='bx bxs-chevron-down arrow' ></i>
                 </div>
                 <ul class="sub-menu">
-                    <li><a class="link_name" href="#">근태관리</a></li>
-                    <li><a href="#">출/퇴근 신청</a></li>
-                    <li><a href="#">연차 신청</a></li>
-                    <li><a href="#">외근 신청</a></li>
+                    <li><a class="link_name" href="/api/v1/attendance">근태관리</a></li>
+                    <li><a href="/api/v1/attendance01">출/퇴근 신청</a></li>
+                    <li><a href="/api/v1/attendance02">연차 신청</a></li>
+                    <li><a href="/api/v1/attendance03">외근 신청</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">
+                <a href="/api/v1/chart">
                     <i class='bx bx-line-chart' ></i>
                     <span class="link_name">차트</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">차트</a></li>
+                    <li><a class="link_name" href="/api/v1/chart">차트</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">
+                <a href="/api/v1/history">
                     <i class='bx bx-history'></i>
                     <span class="link_name">이력</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">이력</a></li>
+                    <li><a class="link_name" href="/api/v1/history">이력</a></li>
                 </ul>
             </li>
             <li>
-                <a href="#">
+                <a href="/api/v1/setting">
                     <i class='bx bx-cog' ></i>
                     <span class="link_name">세팅</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">세팅</a></li>
+                    <li><a class="link_name" href="/api/v1/setting">세팅</a></li>
                 </ul>
             </li>
             <li>
@@ -67,7 +67,7 @@
                         <div id="profileName" class="profile_name"></div>
                         <div id="rank" class="job"></div>
                     </div>
-                    <a href="/logout">
+                    <a href="#" id="logout-btn">
                         <i class='bx bx-log-out'></i>
                     </a>
                 </div>
