--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -38,7 +38,7 @@
 <!-- [header] 영역 끝 -->
 <!-- [content] 영역 시작 -->
 <section class="home-section">
-    <div class="home-content">
+    <div class="home-content" id="content-area">
         <div layout:fragment="content"></div>
     </div>
 </section>
