메뉴 엑티브 효과가 변경되지 않는 현상 수정
bootstrap css, js 추가

--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -37,10 +37,8 @@
 <header th:replace="~{fragments/header :: headerFragment}"></header>
 <!-- [header] 영역 끝 -->
 <!-- [content] 영역 시작 -->
-<section class="home-section">
-    <div class="home-content" id="content-area">
-        <div layout:fragment="content"></div>
-    </div>
+<section class="section" id="content-area">
+    <div layout:fragment="content"></div>
 </section>
 <!-- [content] 영역 끝 -->
 <!-- [footer] 영역 시작 -->
