--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -4,6 +4,7 @@
     <title>MAIN_PAGE</title>
 </head>
 <div layout:fragment="content">
-    <div>메인페이지</div>
+    <div class="content" >
+    </div>
 </div>
 </html>
