--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -260,7 +260,7 @@
 .sidebar .profile-details .job{
     font-size: 12px;
 }
-.home-section{
+.section{
     position: relative;
     background: #E4E9F7;
     height: 100vh;
@@ -268,11 +268,11 @@
     width: calc(100% - 78px);
     transition: all 0.5s ease;
 }
-.sidebar.close ~ .home-section{
+.sidebar.close ~ .section{
     left: 78px;
     width: calc(100% - 78px);
 }
-.home-section .home-content{
+.section .content{
     height: 60px;
     display: flex;
     align-items: center;
@@ -280,7 +280,7 @@
 .bx-menu{
     cursor: pointer;
 }
-.home-section .home-content .text{
+.section .content .text{
     font-size: 26px;
     font-weight: 600;
 }
@@ -294,12 +294,12 @@
     .sidebar.close{
         width: 0;
     }
-    .home-section{
+    .section{
         left: 78px;
         width: calc(100% - 78px);
         z-index: 100;
     }
-    .sidebar.close ~ .home-section{
+    .sidebar.close ~ .section{
         width: 100%;
         left: 0;
     }
