--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -61,7 +61,7 @@
             <li>
                 <div class="profile-details">
                     <div class="profile-content">
-                        <img src="/img/profile_woman.jpg" alt="profileImg">
+                        <img class="bg-white" src="/svg/solid/bxs-user.svg" alt="profileImg">
                     </div>
                     <div class="name-job">
                         <div id="profileName" class="profile_name"></div>
