mybatis 를 사용해 mapper 구성, 쿼리 조회 추가
페이지 이동시 content 내용을 갈아끼우는 방식을 다시 원복

--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -2,6 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
 <head>
     <title>MAIN_PAGE</title>
+    <!-- main.js 추가 -->
+    <script src="/js/domain/main/main.js"></script>
 </head>
 <div layout:fragment="content">
     <div class="container p-t-20">
@@ -12,6 +14,7 @@
                         <i class="bx bx-time-five bx-lg text-primary"></i>
                         <h5 class="card-title mt-2">오늘 출근 시간</h5>
                         <p class="card-title" id="workStartTime">오전 9:00</p>
+                        <button class="btn btn-info" id="testBtn">조회</button>
                     </div>
                 </div>
             </div>
