--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -4,6 +4,11 @@
     <title>MAIN_PAGE</title>
     <!-- main.js 추가 -->
     <script src="/js/domain/main/main.js"></script>
+    <script th:inline="javascript">
+      let annualLeaveDays = /*[[${annualLeaveDays}]]*/ '';
+      let checkInTime = /*[[${checkInTime}]]*/ '';
+      let workDayCount = /*[[${workDayCount}]]*/ '';
+    </script>
 </head>
 <div layout:fragment="content">
     <div class="container p-t-20">
@@ -13,8 +18,7 @@
                     <div class="card-body text-center">
                         <i class="bx bx-time-five bx-lg text-primary"></i>
                         <h5 class="card-title mt-2">오늘 출근 시간</h5>
-                        <p class="card-title" id="workStartTime">오전 9:00</p>
-                        <button class="btn btn-info" id="testBtn">조회</button>
+                        <p class="card-title" id="workStartTime" th:text="${checkInTime}"></p>
                     </div>
                 </div>
             </div>
@@ -23,7 +27,7 @@
                     <div class="card-body text-center">
                         <i class="bx bx-calendar-check bx-lg"></i>
                         <h5 class="card-title mt-2">이번 달 근무일수</h5>
-                        <p class="card-title" id="workDaysThisMonth">15일</p>
+                        <p class="card-title" id="workDaysThisMonth" th:text="${workDayCount}"></p>
                     </div>
                 </div>
             </div>
@@ -32,7 +36,7 @@
                     <div class="card-body text-center">
                         <i class="bx bxs-plane-alt bx-lg"></i>
                         <h5 class="card-title mt-2">남은 연차</h5>
-                        <p class="card-title" id="remainingLeaves">5일</p>
+                        <p class="card-title" id="remainingLeaves" th:text="${annualLeaveDays}"></p>
                     </div>
                 </div>
             </div>
