--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,8 +25,8 @@
                     <i class='bx bxs-chevron-down arrow' ></i>
                 </div>
                 <ul class="sub-menu">
-                    <li><a class="link_name" href="/api/v1/attendance">근태관리</a></li>
-                    <li><a href="/api/v1/attendance01">출/퇴근 신청</a></li>
+                    <li><a class="link_name" href="/api/v1/attendance">근태신청</a></li>
+                    <li><a href="/api/v1/attendance01">출/퇴근 조정</a></li>
                     <li><a href="/api/v1/attendance02">연차 신청</a></li>
                     <li><a href="/api/v1/attendance03">외근 신청</a></li>
                 </ul>
