페이지 이동 시 사이드 바 상태 로컬 스토리지에 저장해서 활용
하위 메뉴 선택 시 상위 메뉴에도 active 효과 되도록 수정
대시보드에서 퇴근시간도 확인하도록 추가
근무일 확인, 남은연차 확인 카드 - 바로가기 추가

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -69,6 +69,10 @@
 .sidebar.close{
     width: 78px;
 }
+.preload .sidebar,
+.preload .profile-details {
+    transition: none !important;
+}
 .sidebar .logo-details{
     height: 60px;
     width: 100%;
@@ -332,4 +336,38 @@
     background-color: #1d1b31;
     color: white;
     font-weight: bold;
+}
+
+.nav-links li.active {
+    background-color: #1d1b31;
+    color: white;
+    font-weight: bold;
+}
+.card-btn {
+    cursor: pointer;
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card-btn:hover {
+    background: rgba(0, 0, 0, 0.7) !important; /* 카드 배경이 어두워지는 효과 */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* 마우스 오버 시 그림자 효과 */
+}
+
+.card-body {
+    position: relative;
+}
+
+.card-btn .quick-link {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.card-btn:hover .quick-link {
+    opacity: 1;
 }
