--- a/src/main/resources/templates/attendance/att02.html
+++ b/src/main/resources/templates/attendance/att02.html
@@ -4,6 +4,6 @@
     <title>ATTENDANCE_PAGE</title>
 </head>
 <div layout:fragment="content">
-    <div>근태관리 페이지</div>
+    <div>연차 신청</div>
 </div>
 </html>
