--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
 <header th:fragment="headerFragment">
     <div class="sidebar close">
         <div class="logo-details">
-            <i class='bx bx-menu' ></i>
+            <i class='bx bx-menu' id="sideBar"></i>
             <span class="logo_name">CMS</span>
         </div>
         <ul class="nav-links">
@@ -13,19 +13,19 @@
                     <span class="link_name">대시보드</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="#">대시보드</a></li>
+                    <li><a class="link_name" href="/main">대시보드</a></li>
                 </ul>
             </li>
             <li>
                 <div class="iocn-link">
-                    <a href="/api/v1/attendance">
+                    <a>
                         <i class='bx bx-collection' ></i>
                         <span class="link_name">근태관리</span>
                     </a>
                     <i class='bx bxs-chevron-down arrow' ></i>
                 </div>
                 <ul class="sub-menu">
-                    <li><a class="link_name" href="/api/v1/attendance">근태신청</a></li>
+                    <li><a class="link_name">근태신청</a></li>
                     <li><a href="/api/v1/attendance01">출/퇴근 조정</a></li>
                     <li><a href="/api/v1/attendance02">연차 신청</a></li>
                     <li><a href="/api/v1/attendance03">외근 신청</a></li>
