--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -7,6 +7,7 @@
     <script th:inline="javascript">
       let annualLeaveDays = /*[[${annualLeaveDays}]]*/ '';
       let checkInTime = /*[[${checkInTime}]]*/ '';
+      let checkOutTime = /*[[${checkOutTime}]]*/ '';
       let workDayCount = /*[[${workDayCount}]]*/ '';
       let checkInExists = /*[[${checkInExists}]]*/ '';
       let checkOutAvailable = /*[[${checkOutAvailable}]]*/ '';
@@ -20,8 +21,9 @@
                 <div class="card bg-white h-100p">
                     <div class="card-body text-center">
                         <i class="bx bx-time-five bx-lg text-primary"></i>
-                        <h5 class="card-title mt-2">금일 출근 시간</h5>
-                        <p class="card-title" id="workStartTime" th:text="${checkInTime}"></p>
+                        <h5 class="card-title mt-2">오늘의 근무시간</h5>
+                        <p class="card-title" id="workStartTime">출근 : <span th:text="${checkInTime}"></span></p>
+                        <p class="card-title" id="workEndTime">퇴근 : <span th:text="${checkOutTime}"></span></p>
                         <div class="d-flex justify-content-end">
                             <button class="btn btn-primary btn-sm hidden" id="checkInBtn">출근</button>
                             <button class="btn btn-primary btn-sm hidden" id="checkOutBtn">퇴근</button>
@@ -30,20 +32,22 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card bg-white h-100p">
+                <div class="card card-btn bg-white h-100p" data-url="/api/v1/attendance02">
                     <div class="card-body text-center">
                         <i class="bx bx-calendar-check bx-lg"></i>
                         <h5 class="card-title mt-2">이달의 근무일</h5>
                         <p class="card-title" id="workDaysThisMonth" th:text="${workDayCount}"></p>
+                        <span class="quick-link">바로가기 →</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card bg-white h-100p">
+                <div class="card card-btn bg-white h-100p" data-url="/api/v1/attendance03">
                     <div class="card-body text-center">
                         <i class="bx bxs-plane-alt bx-lg"></i>
                         <h5 class="card-title mt-2">남은 연차</h5>
                         <p class="card-title" id="remainingLeaves" th:text="${annualLeaveDays}"></p>
+                        <span class="quick-link">바로가기 →</span>
                     </div>
                 </div>
             </div>
