--- a/src/main/resources/templates/attendance/att01.html
+++ b/src/main/resources/templates/attendance/att01.html
@@ -1,20 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
 <head>
-    <title>ATTENDANCE_PAGE</title>
-    <title>MAIN_PAGE</title>
-    <!-- main.js 추가 -->
-    <script src="/js/domain/attendance/att01.js"></script>
-    <script th:inline="javascript">
-    </script>
+    <title>근태조정신청</title>
 </head>
 <div layout:fragment="content">
-    <div class="container p-t-20">
-        <div class="row">
-            <div class="col-md-12 data-table">
-                <div id='calendar'></div>
-            </div>
-        </div>
-    </div>
 </div>
 </html>
