--- a/src/main/resources/templates/attendance/att01.html
+++ b/src/main/resources/templates/attendance/att01.html
@@ -2,7 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
 <head>
     <title>근태조정신청</title>
+    <!-- js -->
+    <script src="/js/domain/attendance/att01.js"></script>
 </head>
 <div layout:fragment="content">
+    <div class="container p-t-20">
+        <div class="row">
+            <div class="col-md-12 data-table">
+                <div id="calendar-container">
+                    <div id="attendanceCalendar" class="m-t-10 m-b-10"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </html>
