--- a/src/main/resources/templates/attendance/att02.html
+++ b/src/main/resources/templates/attendance/att02.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-md-12 data-table">
                 <div id="calendar-container">
-                    <div id="calendar" class="m-t-10 m-b-10"></div>
+                    <div id="leavesCalendar" class="m-t-10 m-b-10"></div>
                 </div>
             </div>
         </div>
