--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="/css/boxicons/boxicons.css" />
         <link rel="stylesheet" href="/css/bootstrap-5.3.3/bootstrap.css" />
         <link rel="stylesheet" href="/css/datatables/datatables.min.css" />
+        <link rel="stylesheet" href="/css/timepicker/timepicker.css" />
 
     </th:block>
     <!-- js -->
@@ -31,6 +32,9 @@
         <script src="/js/datatables/datatables.min.js"></script>
 
         <script src="/js/fullcalendar/index.global.min.js"></script>
+
+        <script src="/js/timepicker/timepicker.js"></script>
+
         <script th:inline="javascript">
           let loginUser = /*[[${loginUser}]]*/ '';
           let rank = /*[[${rank}]]*/ '';
