view, ajax 요청 url 구분, 출퇴근 조정 신청 시 출근 기록이 없는 경우도 신청을 받을 수 있도록 수정

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -26,36 +26,36 @@
                 </div>
                 <ul class="sub-menu">
                     <li><a class="link_name">근태신청</a></li>
-                    <li><a href="/api/v1/attendance01">출/퇴근 조정</a></li>
-                    <li><a href="/api/v1/attendance02">연차 신청</a></li>
-                    <li><a href="/api/v1/attendance03">외근 신청</a></li>
+                    <li><a href="/view/attendance01">출/퇴근 조정</a></li>
+                    <li><a href="/view/attendance02">연차 신청</a></li>
+                    <li><a href="/view/attendance03">외근 신청</a></li>
                 </ul>
             </li>
             <li>
-                <a href="/api/v1/chart">
+                <a href="/view/chart">
                     <i class='bx bx-line-chart' ></i>
                     <span class="link_name">차트</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="/api/v1/chart">차트</a></li>
+                    <li><a class="link_name" href="/view/chart">차트</a></li>
                 </ul>
             </li>
             <li>
-                <a href="/api/v1/history">
+                <a href="/view/history">
                     <i class='bx bx-history'></i>
                     <span class="link_name">이력</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="/api/v1/history">이력</a></li>
+                    <li><a class="link_name" href="/view/history">이력</a></li>
                 </ul>
             </li>
             <li>
-                <a href="/api/v1/setting">
+                <a href="/view/setting">
                     <i class='bx bx-cog' ></i>
                     <span class="link_name">세팅</span>
                 </a>
                 <ul class="sub-menu blank">
-                    <li><a class="link_name" href="/api/v1/setting">세팅</a></li>
+                    <li><a class="link_name" href="/view/setting">세팅</a></li>
                 </ul>
             </li>
             <li>
