--- a/src/main/resources/templates/attendance/att02.html
+++ b/src/main/resources/templates/attendance/att02.html
@@ -4,6 +4,7 @@
     <title>연차신청</title>
     <!-- js -->
     <script src="/js/domain/attendance/att02.js"></script>
+    <script src="/js/domain/attendance/att02-m01.js"></script>
 </head>
 <div layout:fragment="content">
     <div class="container p-t-20">
@@ -15,5 +16,6 @@
             </div>
         </div>
     </div>
+    <div th:replace="~{attendance/att02-m01.html}"></div>
 </div>
 </html>
