--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -14,8 +14,8 @@
         <link rel="stylesheet" href="/css/custom.css" />
         <link rel="stylesheet" href="/css/boxicons/boxicons.css" />
         <link rel="stylesheet" href="/css/bootstrap-5.3.3/bootstrap.css" />
-        <link rel="stylesheet" href="/css/datatables/datatables.min.css" />
         <link rel="stylesheet" href="/css/timepicker/timepicker.css" />
+        <link rel="stylesheet" href="/css/aggrid/ag-theme-alpine.css">
 
     </th:block>
     <!-- js -->
@@ -29,7 +29,7 @@
 
         <script src="/js/bootstrap-5.3.3/bootstrap.js"></script>
 
-        <script src="/js/datatables/datatables.min.js"></script>
+        <script src="/js/aggrid/ag-grid-community.min.js"></script>
 
         <script src="/js/fullcalendar/index.global.min.js"></script>
 
