--- a/src/main/resources/templates/attendance/att04.html
+++ b/src/main/resources/templates/attendance/att04.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/default}">
 <head>
-    <title>외근신청</title>
+    <title>근태신청관리</title>
     <!-- js -->
-    <script src="/js/domain/attendance/att03.js"></script>
+    <script src="/js/domain/attendance/att04.js"></script>
 </head>
 <div layout:fragment="content">
     <div class="container p-t-20">
         <div class="row">
-            <div class="col-md-12 data-table">
-                <div id="calendar-container">
-                    <div id="outsideWorkingCalendar" class="m-t-10 m-b-10"></div>
-                </div>
+            <div class="col-md-12">
+                <div id="myGrid" class="ag-theme-alpine" style="width: 100%; height: 90vh;"></div>
             </div>
         </div>
     </div>
