--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,7 +18,7 @@
             </li>
             <li>
                 <div class="iocn-link">
-                    <a>
+                    <a href="/view/attendance01">
                         <i class='bx bx-collection' ></i>
                         <span class="link_name">근태관리</span>
                     </a>
@@ -29,6 +29,7 @@
                     <li><a href="/view/attendance01">출/퇴근 조정</a></li>
                     <li><a href="/view/attendance02">연차 신청</a></li>
                     <li><a href="/view/attendance03">외근 신청</a></li>
+                    <li><a href="/view/attendance04">근태신청관리</a></li>
                 </ul>
             </li>
             <li>
