--- a/src/main/resources/templates/main/mainView.html
+++ b/src/main/resources/templates/main/mainView.html
@@ -53,8 +53,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12 data-table">
-                <table id="example" class="display" style="width:100%"></table>
+            <div class="col-md-12 m-t-10">
+                <div id="example" class="ag-theme-alpine" style="width: 100%; height: 65vh;"></div>
             </div>
         </div>
     </div>
