근태신청 목록 조회 기능 추가
클로드코드의 프로젝트 분석 결과 작성

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -27,8 +27,7 @@
                 <ul class="sub-menu">
                     <li><a class="link_name">근태신청</a></li>
                     <li><a href="/view/attendance01">출/퇴근 조정</a></li>
-                    <li><a href="/view/attendance02">연차 신청</a></li>
-                    <li><a href="/view/attendance03">외근 신청</a></li>
+                    <li><a href="/view/attendance02">연차/외근 신청</a></li>
                     <li><a href="/view/attendance04">근태신청관리</a></li>
                 </ul>
             </li>
